added compare content

--- a/templates/compare.html
+++ b/templates/compare.html
@@ -95,9 +95,41 @@
 
         <div class="row center">
             <div class="content-box">
-                <div class="subtitle-text">
-                    This page is under construction.
+                <div class="title-text">
+                    asdf
                 </div>
+
+                <table>
+                    <tr>
+                        <td>asdfasdfsadf</td>
+                        <td>Rating</td>
+                        <td>qwerqwerqwer</td>
+                    </tr>
+                    <tr>
+                        <td>asdfasdfsadf</td>
+                        <td>Duration</td>
+                        <td>rwerwerwer</td>
+                    </tr>
+                    <tr>
+                        <td>asdfsadfasd</td>
+                        <td>Danceability</td>
+                        <td>qrqerqer</td>
+                    </tr>
+                    <tr>
+                        <td>asfdfsa</td>
+                        <td>Energy</td>
+                        <td>qerrqqre</td>
+                    </tr>
+                    <tr>
+                        <td>dfassafsda</td>
+                        <td>Liveliness</td>
+                        <td>rqerqerqqer</td>
+                    </tr>
+                    <tr>
+                        <td>sdfdasdfsa</td>
+                        <td>Speechiness</td>
+                        <td>qerrqrqerqe</td>
+                    </tr>
             </div>
         </div>
     </div><!--END main-->
