--- a/templates/song.html
+++ b/templates/song.html
@@ -125,7 +125,7 @@
                     {% for s in similar_songs %}
                         <il>
                             {{ forloop.counter }}.  
-                            <a href = "{% url 'home.views.artist_info' %}?q={{ s.split|join:'+' }}" > {{ s }}</a>
+                            <a href = "{% url 'home.views.song_info' %}?q={{ s.split|join:'+' }}" > {{ s }}</a>
                         </il>
                         <br />
                     {% endfor %}
