added new compare page

--- a/templates/compare-result.html
+++ b/templates/compare-result.html
@@ -93,29 +93,45 @@
 
         <div class="content-h-separator row"></div>
 
-        <!--compare -->
         <div class="row center">
             <div class="content-box">
-                <div class="subtitle-text">
-                    Enter two songs in the search bars below to see a side-by-side comparison of their analysis. 
+                <div class="title-text">
+                    asdf
                 </div>
-                <br />
 
-                <form action="/compare_results/" method="GET">
-                    <input class="col-lg-4 center" type="text" name="q"></input>
-
-                    <button type="submit" class="btn col-lg-4 center">
-                        <span class="glyphicon glyphicon-play"></span> 
-                    </button>
-
-                    <input class="col-lg-4 center" type="text" name="q2"></input>
-                </form>          
-
-                <div class="clear"></div>  
+                <table>
+                    <tr>
+                        <td></td>
+                        <td>Rating</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Duration</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Danceability</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Energy</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Liveliness</td>
+                        <td></td>
+                    </tr>
+                    <tr>
+                        <td></td>
+                        <td>Speechiness</td>
+                        <td></td>
+                    </tr>
             </div>
         </div>
-        </div><!--END compare-->
-
     </div><!--END main-->
 
     <!--right column-->
