--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -7,7 +7,10 @@ body {
 }
 
 table {
-    margin:0 auto;
+    text-align: center;
+}
+#table-container {
+    background: green;
 }
 
 .container {
@@ -114,6 +117,11 @@ table {
     color:black;
     height: 22px;
     width: 100px;
+}
+
+#compare-title {
+    text-align: center;
+    width:100%;
 }
 
 .content-box {
