--- a/static/css/grid.css
+++ b/static/css/grid.css
@@ -1,6 +1,6 @@
 body {
     background: #9A9A9A;
-    margin:0; 
+    margin:0px; 
     padding:0px; 
     color:white;
     font-family: Helvetica;
@@ -8,9 +8,17 @@ body {
 
 table {
     text-align: center;
+    border-style: solid;
+    border-width: 1px;
+    border-color: white;
 }
-#table-container {
-    background: green;
+tr, td {
+    border-style: solid;
+    border-width: 1px;
+    border-color: white;
+}
+th {
+    text-align: center;
 }
 
 .container {
@@ -220,7 +228,8 @@ a:active {
 }
 
 .indent {
-    padding: 5px;
+    position: relative;
+    left: 25px;
 }
 
 .clear {
