--- a/templates/artist.html
+++ b/templates/artist.html
@@ -1,4 +1,6 @@
-﻿<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
+﻿{% load audiosearch_extras %}
+
+<!DOCTYPE html PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <html xmlns="http://www.w3.org/1999/xhtml">
 
 <head>
@@ -103,7 +105,7 @@
                         {% endif %}
                     </div>
 
-                    {{ name }} - {{ hot }} 
+                    {{ name }} - {{ hot|to_percent }}%
                     
                     {% if twitter %}<br /> @{{ twitter }}{% endif %}
                     <br />
