--- a/templates/index.html
+++ b/templates/index.html
@@ -87,7 +87,7 @@
                     <div class="index-box col-lg-11 compare-about-box">
                         <a href="{% url 'home.views.compare' %}"><span class="nav-link"></span></a>
 
-                        Search for two artists or songs to see a visual representation of their differences.<br />
+                        See a side-by-side comparison of the analysis of two songs.<br />
 
                         <div class="box-footer">
                             compare
@@ -103,7 +103,7 @@
                     <!--about block-->
                     <div class="index-box col-lg-11  compare-about-box">
                         <a href="{% url 'home.views.about' %}"><span class="nav-link"></span></a>
-                        Application description, link to source code, and contact information.<br />
+                        Application FAQ, link to source code, and contact information.<br />
 
                         <div class="box-footer">
                             about
