--- a/templates/trending.html
+++ b/templates/trending.html
@@ -107,7 +107,7 @@
 
                 <div class="title-text">
                     1. <a href= "{% url 'home.views.artist_info' %}?q={{ trending.0.name.split|join:'+' }}" > {{ trending.0.name }}</a> 
-                    - {{ trending.0.hotttnesss|to_percent }}%<br />
+                    - <span class="uline" title="A representation of how popular an artist or song is.">{{ trending.0.hotttnesss|to_percent }}%</span><br />
                 </div>
 
                 <!--terms-->
@@ -147,7 +147,7 @@
                         <div class="subtitle-text">
                             {{ forloop.counter }}. 
                             <a href = "{% url 'home.views.artist_info' %}?q={{ artist.name.split|join:'+' }}" > {{ artist.name }}</a> 
-                            - {{ artist.hotttnesss|to_percent }}%
+                            - <span class="line" title="A representation of how popular an artist or song is.">{{ artist.hotttnesss|to_percent }}%</span>
                         </div>
                     </div>
                 </div>
