--- a/templates/song.html
+++ b/templates/song.html
@@ -99,7 +99,7 @@
         <div class="row center">
             <div class="content-box">
                 <div class="title-text">
-                    {{ title }} - {{ hot|to_percent }}%
+                    {{ title }} - <span class="uline" title="A representation of how popular an artist or song is.">{{ hot|to_percent }}%</span>
                 </div>
 
                 <div class="subtitle-text ital"> 
@@ -107,7 +107,7 @@
                 </div>
                 <br />
 
-                Duration: {{ duration }} seconds<br />
+                Duration: {{ duration|floatformat:"0" }} seconds<br />
                 Danceability: {{ dance|to_percent }}%<br />
                 Energy: {{ energy|to_percent }}%<br />
                 Liveliness: {{ liveness|to_percent }}%<br />
